k8s/deployment.yaml
apiVersion:apps/v1
kind: Deployment
metadata:
  name: node-hello-world
  namespace: default
  labels:
    app: node-hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-hello-world
  template:
    metadata:
      labels:
        app: node-hello-world
    spec:
      containers:
      - name: node-hello-world
        image: robb3rt94/node-hello-world:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
